# multilayer-perceptron

./: .gitignore  LICENSE  README.md  pyproject.toml
multilayer_perceptron/: data_look.py  data_split.py  mlp.py  predict.py  test.py  train.py  utils.py  visualization.py
multilayer_perceptron/modules/: Dataset.py  Grapher.py  KFoldIterator.py  Layer.py  Loss.py  Model.py  Optimizer.py  __init__.py
multilayer_perceptron/modules/models/best_model/: activations.csv  biases_0.csv  biases_1.csv  biases_2.csv  optimizer.pkl  weights_0.csv  weights_1.csv  weights_2.csv
multilayer_perceptron/modules/models/my_final_model/: biases_0.csv  biases_1.csv  biases_2.csv  optimizer.pkl  weights_0.csv  weights_1.csv  weights_2.csv
multilayer_perceptron/modules/models/mymodel/: activations.csv  biases_0.csv  biases_1.csv  biases_2.csv  metrics.csv  optimizer.pkl  sizes.csv  weights_0.csv  weights_1.csv  weights_2.csv
